--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <meta
       name="description"
-      content="Natura, for the woman who wants it all. We are a women-only gym that provides a safe and supportive space for women of all shapes and sizes to exercise and reach their fitness goals."
+      content="7m Sports ,Soon in kolathur and open for franchise."
     />
 
-    <title>Natura | For The Woman Who Wants It All.</title>
+    <title>7M Sports | Soon in Kolathur...</title>
   </head>
   <body>
     <div id="root"></div>
